# utop

./: .gitignore  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  swift_output.txt  utop.c
.build/: build.db  plugin-tools.yaml
.build/aarch64-unknown-linux-gnu/debug/: plugin-tools-description.json  stop  swift-version-4D751F277A41598F.txt
.build/aarch64-unknown-linux-gnu/debug/ModuleCache/: Glibc-Q5T8S5C8UZ6Y.swiftmodule  _Concurrency-1S4AZDXAPQTW9.swiftmodule  _StringProcessing-A5O1B4NFE4IV.swiftmodule
.build/aarch64-unknown-linux-gnu/debug/ModuleCache/25XHUP3VI9A3T/: SwiftGlibc-IGSGJKVMPVR1.pcm  SwiftOverlayShims-1GF5F6JABQKOE.pcm  SwiftShims-1GF5F6JABQKOE.pcm  _Builtin_stddef-1G55OLDKDTK0T.pcm
.build/aarch64-unknown-linux-gnu/debug/ModuleCache/30B7KHVHBNSS5/: CDispatch-9OGNHI1QKP4Q.pcm  Dispatch-9OGNHI1QKP4Q.pcm  SwiftGlibc-IGSGJKVMPVR1.pcm  SwiftOverlayShims-1GF5F6JABQKOE.pcm  SwiftShims-1GF5F6JABQKOE.pcm  _Builtin_stddef-1G55OLDKDTK0T.pcm  _FoundationICU-2DVK9LCMXXQ9K.pcm  _SwiftConcurrencyShims-1GF5F6JABQKOE.pcm  (+1 more)
.build/aarch64-unknown-linux-gnu/debug/Modules/: stop.swiftdoc  stop.swiftmodule  stop.swiftsourceinfo
.build/aarch64-unknown-linux-gnu/debug/stop.build/: main.d  main.swiftdeps  master.priors  output-file-map.json  sources  stop.emit-module.d
.build/aarch64-unknown-linux-gnu/debug/stop.product/: Objects.LinkFileList
.github/workflows/: ci.yml
Sources/rtop/: main.swift
Sources/stop/: main.swift
src/: main.c  main.rs
tests/: parity_test.py  utop_c  utop_c_out.txt
tests/c_reference/: main.c
(+31 files in other folders)
